--- a/sass/elements/image.scss
+++ b/sass/elements/image.scss
@@ -12,7 +12,7 @@ $dimensions: 16 24 32 48 64 96 128 !default;
     width: 100%;
 
     &.is-rounded {
-      border-radius: $radius-rounded;
+      border-radius: getVar("radius-rounded");
     }
   }
 
