--- a/sass/elements/other.scss
+++ b/sass/elements/other.scss
@@ -22,10 +22,10 @@
 
 .#{$class-prefix}number {
   align-items: center;
-  background-color: $background;
-  border-radius: $radius-rounded;
+  background-color: getVar("background");
+  border-radius: getVar("radius-rounded");
   display: inline-flex;
-  font-size: $size-medium;
+  font-size: getVar("size-medium");
   height: 2em;
   justify-content: center;
   margin-right: 1.5rem;
