--- a/sass/themes/default.scss
+++ b/sass/themes/default.scss
@@ -16,6 +16,7 @@
       weight-semibold: #{$weight-semibold},
       weight-bold: #{$weight-bold},
       block-spacing: #{$block-spacing},
+      gap: #{$gap},
       easing: #{$easing},
       radius-small: #{$radius-small},
       radius: #{$radius},
